update the rrfs-yaml directory

--- a/rrfs-yaml/header/getkf.yaml
+++ b/rrfs-yaml/header/getkf.yaml
@@ -19,6 +19,8 @@ _member: &memberConfig
   - isltyp
   - snowh
   - vegetation_area_fraction
+  - air_temperature_at_2m
+  - water_vapor_mixing_ratio_wrt_moist_air_at_2m
   - eastward_wind_at_10m
   - northward_wind_at_10m
   - lai
@@ -42,7 +44,7 @@ output mean prior:
   filename: ./prior_mean.nc
   stream name: background
 
-output: # for outputting mean posterior
+output:
   filename: ./data/ens/mem%{member}%.nc
   stream name: analysis
 
