add 4 satwnd observers and update some radiance observers by adding the missing two filters

--- a/rrfs-yaml/split.jedivar.yaml/abi_g16.yaml
+++ b/rrfs-yaml/split.jedivar.yaml/abi_g16.yaml
@@ -85,6 +85,33 @@
   # Observation Filters (QC)
   # ------------------------
        obs pre filters:
+       # Satellite Zenith Angle Check
+       - filter: Bounds Check
+         filter variables:
+         - name: brightnessTemperature
+           channels: *abi_g16_channels
+         test variables:
+         - name: MetaData/sensorZenithAngle
+         maxvalue: 65.
+         action:
+           name: reduce obs space
+       # Data Thinning
+       - filter: Gaussian Thinning
+         filter variables:
+         - name: brightnessTemperature
+           channels: *abi_g16_channels
+         #horizontal_mesh: 145
+         horizontal_mesh: 60
+         use_reduced_horizontal_grid: true
+         distance_norm: maximum
+         time_mesh: '{{window_length}}'
+         time_min: '{{window_begin}}'
+         time_max: '{{window_end}}'
+         #  round_horizontal_bin_count_to_nearest: true
+         #  partition_longitude_bins_using_mesh: true
+         actions:
+           - name: reduce obs space
+
        # from read_abi: Reject when cloud fraction is more than 30
        - filter: Domain Check
          filter variables:
