--- a/rrfs-yaml/split.jedivar.yaml/amsua_metop-b.yaml
+++ b/rrfs-yaml/split.jedivar.yaml/amsua_metop-b.yaml
@@ -71,6 +71,28 @@
                ratio for small dataset: 2.0
            output file: data/satbias_out/amsua_metop-b.satbias_cov.nc
        obs pre filters:
+       # Step 0-A: Create Diagnostic Flags
+       - filter: Create Diagnostic Flags
+         filter variables:
+         - name: brightnessTemperature
+           channels: *amsua_metop-b_channels
+         flags:
+         - name: Thinning
+           initial value: false
+           force reinitialization: false
+       obs post filters:
+       #Thinning
+       - filter: Gaussian Thinning
+         #horizontal_mesh: 145
+         horizontal_mesh: 60
+         use_reduced_horizontal_grid: true
+         distance_norm: geodesic
+       #  round_horizontal_bin_count_to_nearest: true
+       #  partition_longitude_bins_using_mesh: true
+         actions:
+           - name: set
+             flag: Thinning
+           - name: reject
        # Regional domain check to remove data outside of model domain
        - filter: Bounds Check
          filter variables:
